<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upperPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1EA2ED"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="21sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/export_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:text="@string/export_pdf"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/screen_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintTop_toBottomOf="@id/upperPanel"
        tools:layout_editor_absoluteX="-2dp" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.navigation.NavigationView
            style="@style/BottomBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:elevation="0dp"
            app:itemHorizontalPadding="0dp"
            app:itemIconPadding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/stats"
                    style="@style/BottomBarButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/stats"
                    app:shapeAppearance="@style/Base.CardView" />

                <Button
                    android:id="@+id/check"
                    style="@style/BottomBarButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sign" />

                <Button
                    android:id="@+id/profile"
                    style="@style/BottomBarButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/profile" />

            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>